Fogbugz case id - 246 1. Updated lock icon image 2. Fixed spacing issues

--- a/src/components/ChangePassword/ChangePassword.less
+++ b/src/components/ChangePassword/ChangePassword.less
@@ -21,6 +21,9 @@
   .center-form {
     width: 650px;
     margin: 100px auto;
+    p{
+      margin:40px 0 30px;
+    }
   }
 
   .btn {
@@ -38,7 +41,15 @@
       float: left;
     }
   }
-
+  .icon-lock{
+    background: url("../../assets/icons/lock_icon.png") no-repeat;
+    display: inline-block;
+    width:52px;
+    height:76px;
+    vertical-align: middle;
+    background-size: 100%;
+    margin-right:10px;
+  }
 }
 
 .cancel-btn {
